@@ -147,7 +147,7 @@ public:
     return getTopDirPath();
   }
 
-  virtual uint64_t size() const;
+  virtual uint64_t size();
 
   virtual SharedHandle<FileAllocationIterator> fileAllocationIterator();
 
